class_blog_jpa_v1/src/main/java/com/example/demo/common/errors/Exception400.java
package com.example.demo.common.errors;

public class Exception400 extends RuntimeException {

	public Exception400(String msg) {
		super();
	}
}
